--- a/templates/Blog/addCategory.html.twig
+++ b/templates/Blog/addCategory.html.twig
@@ -1,25 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Index{% endblock %}
-
 {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 {% endblock %}
 
+
 {% block body %}
-    <h1>All articles from article s table : </h1>
-    {% for article in articles %}
-        <div>
-            <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
-            <p>{{ article.content }}</p>
-        </div>
+    <ul class="row">
+    {% for category in categories %}
+        <li class="col-6">{{ category.name }}</li>
+        <a href="{{ path('deleteCategory', {id:category.id}) }}" class="col-6">Delete</a>
     {% endfor %}
-
-    <a href="{{ path('home') }}">
-        Back to homepage.
-    </a>
+    </ul>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <input type="submit" value="send" class="btn btn-success offset-6">
+    {{ form_end(form) }}
 {% endblock %}
-
 {% block javascripts %}
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
