--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,7 +4,7 @@
 
     <h1>Title of the articles </h1>
     {% for article in articles %}
-    <div> {{ article.title }} </div>
+    <div> {{ article.title }} <a href="{{ path('blog_show', {'id': article.id }) }}">{{article.title}}</a> </div>
     {% endfor %}
 
 {% endblock %}
