14 - Symfony : Introduction aux Services

--- a/templates/Blog/category.html.twig
+++ b/templates/Blog/category.html.twig
@@ -11,7 +11,7 @@
     <table class="table">
         <thead>
         <tr class="thead-dark">
-            <th colspan="2" style="text-align: center">Category : {{ onecateg.category.name }}</th>
+            <th colspan="2" style="text-align: center">Category : {{ dump(onecateg.category.name) }}</th>
         </tr>
         <tr class="thead-light" style="text-align: center">
             <th scope="col">Title</th>
