--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -1,26 +1,24 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Edit Category{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 {% endblock %}
 
-
 {% block body %}
-    <ul class="row">
-    {% for category in categories %}
-        <li class="col-6">{{ category.name }}</li>
-        <a href="{{ path('deleteCategory', {id:category.id}) }}" class="col-6">Delete</a>
-    {% endfor %}
-    </ul>
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type="submit" value="send" class="btn btn-success offset-6">
-    {{ form_end(form) }}
-{% endblock %}
-{% block javascripts %}
+    <h1>Edit Category</h1>
 
+    {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
+
+    <a href="{{ path('category_index') }}">back to list</a>
+
+    {{ include('category/_delete_form.html.twig') }}
+{% endblock %}
+
+
+{% block javascripts %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
 {% endblock %}
