--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -1,19 +1,43 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Tag index{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 {% endblock %}
 
+
 {% block body %}
+    <h1>Tag index</h1>
 
-    <h1>Title of the articles </h1>
-    {% for article in articles %}
-    <div> {{ article.title }} <a href="{{ path('blog_show', {'id': article.id }) }}">{{article.title}}</a> </div>
-    {% endfor %}
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for tag in tags %}
+            <tr>
+                <td>{{ tag.id }}</td>
+                <td>{{ tag.name }}</td>
+                <td>
+                    <a href="{{ path('tag_show', {'id': tag.id}) }}">show</a>
+                    <a href="{{ path('tag_edit', {'id': tag.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="3">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
+    <a href="{{ path('tag_new') }}">Create new</a>
 {% endblock %}
-
-
 
 
 {% block javascripts %}
