--- a/templates/tag/new.html.twig
+++ b/templates/tag/new.html.twig
@@ -1,19 +1,18 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}New Tag{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 {% endblock %}
 
 {% block body %}
+    <h1>Create new Tag</h1>
 
-    <h1>Title of the articles </h1>
-    {% for article in articles %}
-    <div> {{ article.title }} <a href="{{ path('blog_show', {'id': article.id }) }}">{{article.title}}</a> </div>
-    {% endfor %}
+    {{ include('tag/_form.html.twig') }}
 
+    <a href="{{ path('tag_index') }}">back to list</a>
 {% endblock %}
-
-
 
 
 {% block javascripts %}
