--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -1,19 +1,33 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Tag{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 {% endblock %}
 
 {% block body %}
+    <h1>Tag</h1>
 
-    <h1>Title of the articles </h1>
-    {% for article in articles %}
-    <div> {{ article.title }} <a href="{{ path('blog_show', {'id': article.id }) }}">{{article.title}}</a> </div>
-    {% endfor %}
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ tag.id }}</td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td>{{ tag.name }}</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <a href="{{ path('tag_index') }}">back to list</a>
+
+    <a href="{{ path('tag_edit', {'id': tag.id}) }}">edit</a>
+
+    {{ include('tag/_delete_form.html.twig') }}
 {% endblock %}
-
-
 
 
 {% block javascripts %}
