10_Symfony_Generer_un_CRUD avec article tag et categ fonctionnelle

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Article index{% endblock %}
 
+{% block stylesheets %}
+{% endblock %}
+
 {% block body %}
     <h1>Article index</h1>
 
