--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}New Article{% endblock %}
 
+{% block stylesheets %}
+{% endblock %}
+
 {% block body %}
     <h1>Create new Article</h1>
 
