Initiation au module Webpack Encore

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -2,8 +2,7 @@
 
 {% block title %}Article{% endblock %}
 
-{% block stylesheets %}
-{% endblock %}
+{% block stylesheets %}{% endblock %}
 
 {% block body %}
     <h1>Article</h1>
@@ -35,3 +34,5 @@
 
     {{ include('article/_delete_form.html.twig') }}
 {% endblock %}
+
+{% block javascripts %}{% endblock %}
