--- a/templates/request.html.twig
+++ b/templates/request.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}{% endblock %}
+
+
 {% block body %}
 
     <table>
@@ -44,3 +47,5 @@
     </table>
 
 {% endblock %}
+
+{% block javascripts %}{% endblock %}
